desktop-base (9.0.0) UNRELEASED; urgency=medium

  [ Aurélien COUDERC ]
  * Implement Plymouth splash for Stretch’s soft Waves theme.
    (Closes: #843998, #842078)

 -- Aurélien COUDERC <zecoucou@free.fr>  Tue, 27 Dec 2016 17:58:13 +0100

desktop-base (9.0.0~exp2) experimental; urgency=medium

  [ Aurélien COUDERC ]
  * Fix detection of update-initramfs. (Closes: #843727)
  * Include GRUB text/background colors in the theme pack / alternatives
    system. (Closes: #606383)

  * Additional wallpaper and lockscreen ratios for Soft Waves theme.
  * Remove Moreblue theme from Lenny.
  * Add theme pack support Joy/Spacefun themes.

  * Use dash instead of bash for postinst
  * Generate all GRUB bitmaps from SVG at build time instead of versioning
    them.
  * Stop shipping SDDM breeze-based theme, now in plasma-workspace.

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 19 Dec 2016 14:51:42 +0100

desktop-base (9.0.0~exp1) experimental; urgency=medium

  [ Aurélien COUDERC ]
  * Initial support for Soft Waves theme by Juliette Belin.
    - Default theme for GRUB (Closes: #598776, #773369)
    - Default theme for Gnome wallpaper and lock screen
    - Default theme for Plasma 5 wallpaper (Closes: #831730)
    - Theme available for SDDM login and lock screen
    - debian/copyright updated
  * Initial support for global theme switching via alternatives

  * Remove references to long gone KDE3 globals in maintainer scripts.
    (Closes: #659549)
  * README.Debian: inform about updating initrds too. (Closes: #612163)
  * Document use of sync use before grub update in postinst. (Closes: #611364)
  * Add SDDM theming for KDE/Plasma 5:
    - Based on default SDDM theme breeze + Debian theme background.
    - Can be configured with alternatives (also works in lightdm).
   (Closes: #415064, #608523, #611170, #670866, #762276)
  * Remove deprecated ksplash and kdm from KDE4. (Closes: #607842)
  * Remove deprecated splash options from Gnome 2.