@@ -56,6 +56,7 @@ install-local:
 	install -d $(DESTDIR)/usr/share/plymouth/themes/spacefun
 	$(INSTALL) $(wildcard spacefun-theme/plymouth/*) $(DESTDIR)/usr/share/plymouth/themes/spacefun
 	cd $(DESTDIR)/usr/share/desktop-base/spacefun-theme && ln -s /usr/share/plymouth/themes/spacefun plymouth
+	$(INSTALL) spacefun-theme/plymouthd.defaults $(DESTDIR)/usr/share/desktop-base/spacefun-theme
 	### Login background
 	install -d $(DESTDIR)/usr/share/desktop-base/spacefun-theme/login
 	$(INSTALL) $(wildcard spacefun-theme/login/*) $(DESTDIR)/usr/share/desktop-base/spacefun-theme/login
@@ -79,6 +80,8 @@ install-local:
 	install -d $(DESTDIR)/usr/share/plymouth/themes/joy
 	$(INSTALL) $(wildcard joy-theme/plymouth/*) $(DESTDIR)/usr/share/plymouth/themes/joy
 	cd $(DESTDIR)/usr/share/desktop-base/joy-theme && ln -s /usr/share/plymouth/themes/joy plymouth
+	$(INSTALL) joy-theme/plymouthd.defaults $(DESTDIR)/usr/share/desktop-base/joy-theme
+
 	### Login background
 	install -d $(DESTDIR)/usr/share/desktop-base/joy-theme/login
 	$(INSTALL) $(wildcard joy-theme/login/*) $(DESTDIR)/usr/share/desktop-base/joy-theme/login
@@ -105,7 +108,11 @@ install-local:
 	# Joy Inksplat theme (Wheezy’s alternate theme)
 	install -d $(DESTDIR)/usr/share/desktop-base/joy-inksplat-theme
 	### Plymouth theme
-	cd $(DESTDIR)/usr/share/desktop-base/joy-inksplat-theme && ln -s /usr/share/plymouth/themes/joy plymouth
+	# Reuse « normal » joy theme
+	cd $(DESTDIR)/usr/share/desktop-base/joy-inksplat-theme \
+		&& ln -s /usr/share/plymouth/themes/joy plymouth \
+		&& ln -s /usr/share/desktop-base/joy-theme/plymouthd.defaults plymouthd.defaults
+
 	### Wallpapers
 	install -d $(DESTDIR)/usr/share/desktop-base/joy-inksplat-theme/wallpaper/contents/images
 	$(INSTALL) joy-inksplat-theme/wallpaper/metadata.desktop $(DESTDIR)/usr/share/desktop-base/joy-inksplat-theme/wallpaper
@@ -124,6 +131,7 @@ install-local:
 	install -d $(DESTDIR)/usr/share/plymouth/themes/lines
 	$(INSTALL) $(wildcard lines-theme/plymouth/*) $(DESTDIR)/usr/share/plymouth/themes/lines
 	cd $(DESTDIR)/usr/share/desktop-base/lines-theme && ln -s /usr/share/plymouth/themes/lines plymouth
+	$(INSTALL) lines-theme/plymouthd.defaults $(DESTDIR)/usr/share/desktop-base/lines-theme
 	### Login background
 	install -d $(DESTDIR)/usr/share/desktop-base/lines-theme/login
 	$(INSTALL) $(wildcard lines-theme/login/*) $(DESTDIR)/usr/share/desktop-base/lines-theme/login
@@ -153,6 +161,7 @@ install-local:
 	install -d $(DESTDIR)/usr/share/plymouth/themes/softwaves
 	$(INSTALL) $(wildcard softwaves-theme/plymouth/*) $(DESTDIR)/usr/share/plymouth/themes/softwaves
 	cd $(DESTDIR)/usr/share/desktop-base/softwaves-theme && ln -s /usr/share/plymouth/themes/softwaves plymouth
+	$(INSTALL) softwaves-theme/plymouthd.defaults $(DESTDIR)/usr/share/desktop-base/softwaves-theme
 	### Login background
 	install -d $(DESTDIR)/usr/share/desktop-base/softwaves-theme/login
 	$(INSTALL) $(wildcard softwaves-theme/login/*) $(DESTDIR)/usr/share/desktop-base/softwaves-theme/login
