@@ -1,0 +1,4 @@
+# Defaults provided by desktop-base for the joy theme
+[Daemon]
+Theme=joy
+ShowDelay=0
