@@ -1,0 +1,4 @@
+# Defaults provided by desktop-base for the lines theme
+[Daemon]
+Theme=lines
+ShowDelay=0
