@@ -1,0 +1,4 @@
+# Defaults provided by desktop-base for the softwaves theme
+[Daemon]
+Theme=softwaves
+ShowDelay=0
