@@ -1,0 +1,4 @@
+# Defaults provided by desktop-base for the spacefun theme
+[Daemon]
+Theme=spacefun
+ShowDelay=0
